# blik

./: .dockerignore  .env.digitalocean.template  .env.example  .env.production  .env.test  .gitignore  ANALYSIS_INDEX.md  DEPLOYMENT.md  Dockerfile  Dockerfile.landing  Dockerfile.test  MULTITENANCY_QUICK_REFERENCE.md  MULTITENANCY_SECURITY_ANALYSIS.md  PRODUCTION_CHECKLIST.md  README.md  README.testing.md  REQUIREMENTS.md  REVIEWEE_MODEL_USAGE_ANALYSIS.md  SCREENSHOT_SETUP_SUMMARY.md  STRIPE_WEBHOOKS.md  TESTING.md  docker-compose.landing.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint-landing.sh  docker-entrypoint-nginx.sh  docker-entrypoint.sh  landing_settings.py  landing_urls.py  landing_wsgi.py  manage.py  nginx.conf.template  payments.md  pyproject.toml  requirements-screenshots.txt  stripe-webhook-forward.sh  test.sh
.claude/: standards.md
.do/: app.yaml
accounts/: admin.py  apps.py  factories.py  forms.py  import_service.py  invitation_views.py  models.py  permissions.py  services.py  signals.py  test_permissions.py  tests.py  urls.py  views.py
api/: admin.py  apps.py  authentication.py  exceptions.py  models.py  permissions.py  serializers.py  signals.py  test_authentication.py  test_permissions.py  test_viewsets.py  test_webhooks.py  throttling.py  urls.py  viewsets.py  webhooks.py
blik/: account_urls.py  account_views.py  admin_views.py  asgi.py  context_processors.py  seo_views.py  settings.py  superuser_views.py  urls.py  views.py  wsgi.py
core/: admin.py  email.py  factories.py  forms.py  gdpr.py  managers.py  middleware.py  (+4 more)
(+262 files in other folders)
