[project]
name = "blik"
version = "0.1.0"
description = "Self-hosted 360-degree feedback and performance review system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "psycopg[binary]>=3.1",
    "django-environ>=0.11.2",
    "dj-database-url>=2.1.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "pillow>=10.0.0",
    "stripe>=7.0.0",
    "django-cors-headers>=4.3.0",
    "django-allauth>=0.63.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "django-ratelimit>=4.1.0",
    "django-csp>=3.8",
    "django-axes>=6.1.1",
    "djangorestframework>=3.14.0",
    "drf-spectacular>=0.27.0",
    "drf-spectacular-sidecar>=2024.0.0",
    "django-filter>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-django>=4.7.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "blik.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
